<resources>
    <string name="app_name">CHOSEN</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="google_maps_key">AIzaSyBu8tBKpmEhHrzw70XrVa8vMxftmw1gO50</string>

    <!--facebook authen-->
    <string name="facebook_app_id">153692355492535</string>
    <string name="fb_login_protocol_scheme">fb153692355492535</string>

    <string name="tv_username">Username</string>
    <string name="tv_password">Password</string>
    <string name="btn_Login">Login</string>
    <string name="btn_Register">Register</string>
    <string name="rad_keep_login">Keep Login</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="successfully_posted_post">successfully</string>
    <string name="success">Success</string>
    <string name="tv_rg_name">Name :</string>
    <string name="tv_rg_username">Username :</string>
    <string name="et_input_name">Full Name</string>
    <string name="et_input_email">Email</string>
    <string name="et_input_sername">Sername</string>
    <string name="tv_rg_sername">Sername :</string>
    <string name="tv_rg_mail">Email :</string>
    <string name="tv_rg_tel">Tel :</string>
    <string name="tv_select_car">Please select your car.</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_cancel">cancel</string>

    <!--<string name="nav_home"><b> HOME</b></string>-->
    <!--<string name="nav_station">\t\t\t>> STATION</string>-->
    <!--<string name="nav_profile">\t\t\t>> PROFILE</string>-->
    <!--<string name="nav_wallet">\t\t\t>> WALLET</string>-->
    <!--<string name="nav_usage">\t\t\t>> USAGE DETAILS</string>-->
    <!--<string name="nav_service">\t\t\t>> SERVICE</string>-->
    <!--<string name="nav_logout">\t\t\t>> LOGOUT</string>   -->

    <string name="nav_home">HOME</string>
    <string name="nav_station">STATION</string>
    <string name="nav_profile">PROFILE</string>
    <string name="nav_wallet">WALLET</string>
    <string name="nav_usage">USAGE DETAILS</string>
    <string name="nav_service">SERVICE</string>
    <string name="action_logout">Logout</string>

    <string name="tv_nav_wallet">Your Wallet</string>
    <string name="tv_nav_remaing">Remaining Balance</string>
    <string name="strTitleLogout" />
    <string name="msgLogout">do you want logout?</string>
    <string name="confirm_dialog">Yes</string>
    <string name="cancel_dialog">No</string>
    <string name="tv_header_dt">THE MALL BANGKAPI</string>
    <string name="tv_detail_lbl">DETAIL</string>
    <string name="btn_go_reserve">RESERVE</string>


    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="item_1">menu1</string>
    <string name="item_2">menu2</string>
    <string name="msgLoading">Loading......</string>
    <string name="et_sheach">Search</string>
    <string name="msgExit">Do you want to exit app.</string>
    <string name="et_input_pwd">Password</string>
    <string name="et_input_usr">Username</string>
    <string name="tv_rg_pwd">Password :</string>
    <string name="tv_header_reserve">THE MALL BANGKOKAPI</string>
    <string name="tv_header_open_hour">OPEN HOUR</string>
    <string name="btn_comment">Comment</string>
    <string name="btn_photo">Photo</string>
    <string name="btn_modify">Modify</string>
    <string name="btn_navigation">Nav</string>
    <string name="tv_state_header">10 STATIONS TYPE</string>
    <string name="nav_paypal">PAYPAL</string>
    <string name="tv_lbl_id_payment">ID PAYMENT :</string>
    <string name="tv_lbl_state_payment">STATE :</string>
    <string name="tv_lbl_amt">AMOUNT :</string>
    <string name="btn_ok">OK</string>
    <string name="btn_price">100 Bath</string>
    <string name="tv_header_invoice">Payment Invoice</string>
    <string name="btn_pay_now">Pay Now</string>
    <string name="btn_not_now">Not Now</string>
    <string name="tv_lbl_card_id">CARD ID</string>
    <string name="tv_lbl_pole_id">POLE ID : </string>
    <string name="tv_header_incard">Input Data Card</string>
    <string name="et_card_id">Please enter you EV-CARD number.</string>
    <string name="tv_lbl_pay_code">Pay Code :</string>
    <string name="tv_lbl_create_date">Create :</string>
    <string name="tv_lbl_poleid">Pole ID :</string>
    <string name="tv_amt">Price :</string>
    <string name="tv_price">Price :</string>
    <string name="tv_card_id">Card ID :</string>
    <string name="btn_add">Add Card</string>
    <string name="menu_card">CARD</string>
    <string name="menu_charge">CHARGE</string>
    <string name="menu_payment">PAYMENT</string>
    <string name="menu_invoice">Invoice</string>
    <string name="menu_home">HOME</string>
    <string name="btn_scancard">Scan Card</string>
    <string name="doscanActivatecard">Scan A barcode for activate card.</string>
    <string name="menu_set_language">Language</string>
    <string name="toolbarHome">HOME</string>
    <string name="tv_header_select_language">Select Languages</string>
    <string name="record">\tRecords</string>
    <string name="registerFail">Registration Failed - Account already exist</string>
    <string name="btn_car_modal">Car Model</string>
    <string name="btn_invoice">Invoice</string>
    <string name="tv_image_tb">Image</string>
    <string name="tv_brands_tb">Detail</string>
    <string name="tv_carmodel_tb">Car Model</string>
    <string name="tv_select_tb">Select</string>
    <string name="tv_brands_detail">Brand :</string>
    <string name="tv_lbl_Carmodel">Car Model :</string>
    <string name="btn_select">SELECT</string>
    <string name="title_carmodel">CAR MODEL</string>
    <string name="card">FOR CARD ID</string>
    <string name="tv_lbl_car_name">CAR MODEL</string>
    <string name="tv_lbl_name">Name :</string>
    <string name="tv_lbl_street">Street :</string>
    <string name="tv_lbl_city">City :</string>
    <string name="tv_lbl_postalcode">Postalcode :</string>
    <string name="tv_lbl_mobile">Mobile :</string>
    <string name="et_fullname">Full Name</string>
    <string name="btn_select_img">Select Image</string>
    <string name="btn_edit">Edit Profile</string>
    <string name="menu_profile">Profile</string>
    <string name="saveSuccess">Upload Data Success</string>
    <string name="menu_report">TREND</string>
    <string name="tv_lbl_header_report">Graph Report Charge</string>
    <string name="tv_date_start">Start Date</string>
    <string name="et_date_end">End Date</string>
    <string name="tv_total_charge">Total Charge</string>
    <string name="pleaseChoose">Please Choose</string>
    <string name="menu_contact_us">Contract us</string>
    <string name="errInput">Please Input Text</string>
    <string name="tv_version">v3.3.5</string>
    <string name="menu_tran">TRANSACTION</string>
    <string name="title_usege">USAGE</string>
    <string name="menu_payment_lower">Payment</string>
    <string name="menu_map">MAP</string>
    <string name="btn_search">Search</string>
    <string name="menu_user">User</string>
    <string name="btn_clear">Clear</string>

    <string-array name="state_invoice">
        <item>Please Select Status</item>
        <item>Paid</item>
        <item>UnPaid</item>

    </string-array>



</resources>
