<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="chosen_new.com.chosen.MainActivity">
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/menu_user"
        app:showAsAction="never" />
    <!--<item-->
        <!--android:id="@+id/action_report"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="@string/menu_report"-->
        <!--app:showAsAction="never" />-->
    <item
        android:id="@+id/action_invoice"
        android:orderInCategory="100"
        android:title="@string/menu_payment_lower"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/menu_set_language"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_contact_us"
        android:orderInCategory="100"
        android:title="@string/menu_contact_us"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:icon="@drawable/ic_exit"
        android:title="@string/action_logout"
        app:showAsAction="never" />

</menu>
