<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_card"
            android:icon="@drawable/ic_card"
            android:title="@string/menu_card" />
        <item
            android:id="@+id/nav_state_charge"
            android:icon="@drawable/ic_battery_charging"
            android:title="@string/menu_charge" />
        <item
        android:id="@+id/nav_paypal"
        android:icon="@drawable/ic_paypal"
        android:title="@string/menu_payment" />

        <item
            android:id="@+id/nav_invoice"
            android:icon="@drawable/ic_invoice"
            android:title="@string/menu_invoice" />

        <!--<item-->
            <!--android:id="@+id/nav_station"-->
            <!--android:icon="@drawable/ic_station"-->
            <!--android:title="@string/nav_station" />-->
        <!--<item-->
            <!--android:id="@+id/nav_profile"-->
            <!--android:icon="@drawable/ic_profile"-->
            <!--android:title="@string/nav_profile" />-->
        <!--<item-->
            <!--android:id="@+id/nav_wallet"-->
            <!--android:icon="@drawable/ic_paypal"-->
            <!--android:title="@string/nav_wallet" />-->

        <!--<item-->
            <!--android:id="@+id/nav_usage_detail"-->
            <!--android:icon="@drawable/ic_usege_detail"-->
            <!--android:title="@string/nav_usage" />-->
        <!--<item-->
            <!--android:id="@+id/nav_service"-->
            <!--android:icon="@drawable/ic_service"-->
            <!--android:title="@string/nav_service" />-->
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit"
            android:title="@string/nav_logout" />
    </group>

</menu>
