<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_lbl_id_payment"
            android:textAllCaps="false"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tv_id_payment"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_go_reserve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/tv_lbl_amt"
            android:textStyle="bold"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_amt"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_go_reserve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/tv_lbl_state_payment"
            android:textStyle="bold"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_state"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_go_reserve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_OK"
        android:textColor="@color/btn_background"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/bootstrap_brand_info"
        android:text="@string/btn_ok"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

</LinearLayout>